--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,17 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="container-sm mt-4 border border-dark text-center h-50 p-3" id="carta">
+      <div class="row">
+        <div class="col-3" style="font-size:90px;" id="pintaSuperior"></i></div>
+        <div class="col-9"></div>
+      </div>
+      <div class="row">
+        <div class="col-12 my-5" id="Numero"></div>
+      </div>
+      <div class="row">
+        <div class="col-9"></div>
+        <div class="col-3" style="transform:rotate(180deg); font-size: 90px;" id="pintaInferior"></i></div>
       </div>
     </div>
   </body>
