--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,8 @@
         <div class="col-3" style="transform:rotate(180deg); font-size: 90px;" id="pintaInferior"></i></div>
       </div>
     </div>
+    <div class="d-grid gap-2 col-6 mx-auto">
+      <button type="button" class="btn btn-light mx-auto" id="genera">Genera nueva Carta</button>
+    </div>
   </body>
 </html>
